# CLIpher-client

./: .gitignore  Cargo.toml  README.md
src/: constants.rs  error.rs  main.rs
src/api_structures/: mod.rs
src/encryption/: AES.rs  derive.rs  hmac.rs  mod.rs  rsa.rs
src/enums/: mod.rs
src/error/: decryption.rs  derive.rs  encryption.rs  hash.rs  hmac.rs  mod.rs  packager.rs  salt.rs  string_err.rs
src/generators/: iv.rs  mod.rs  salt.rs
src/packager/: mod.rs
src/utils/: array.rs  binary.rs  hash.rs  mod.rs  salt.rs
