[package]
name = "client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
base64 = "0.13.0"
hex = "0.4.3"
pbkdf2 = "0.8"
rand_core = { version = "0.6", features = ["std"] }
substring = "1.4.5"
libaes = "0.6.1"
hmac = "0.11.0"
sha2 = "0.9.5"
hmac-sha256 = "0.1.7"
spinner = "0.5.0"
reqwest = { version = "0.11.4", features = ["json"]}
openssl = "0.10.35"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
futures = { version = "0.3.0" }
tokio = {version = "1.9.0", features = ["full"] }
dialoguer = "0.8.0"